# Aalborg-University---Projects

./: .gitignore  CMakeLists.txt  README.md
P1 Project/P1 Prototype/: CMakeLists.txt  load_user.c  menu.c  menu.h  settings.h  utilities.h
P1 Project/P1 Prototype/Emils Prototype/: main.c  menu.c  menu.h  settings.c  settings.h  utilities.c
P1 Project/P1 Prototype/Lists/: 1_groceries.txt  3_groceries.txt  shoppinglist.txt
P1 Project/P1 Prototype/Lists2/: 2_info.txt
P1 Project/P1 Prototype/Mathiases Prototype/: file_management.c  file_management.h  run_time.c  run_time.h
P1 Project/P1 Prototype/Mathiases Prototype2/: file_management.c  main.h  run_time.c  run_time.h
P1 Project/testingtester/: file.txt
Project-P1/: CMakeLists.txt  README.md
Project_P1/Prototype/: CMakeLists.txt
Project_P1/Prototype/Prototypes/Experimental_prototype/: menu.c  settings.h  utilities.c  utilities.h
Project_P1/Prototypes/: CMakeLists.txt
Project_P1/Prototypes/Experimental_prototype/: database_management.c  database_management.h  main.c  memory.c  menu.c  profile_management.c  search_management.c  search_management.h  settings.c  settings.h  utilities.c  utilities.h
Project_P1/Prototypes/Project_prototype/: file_management.c  file_management.h  main.c  main.h  run_time.c  run_time.h  store_management.c  store_management.h  utilities.c  utilities.h
Project_P1/Prototypes/Project_prototype/Lists/: shoppinglist.txt
Project_P1/Solution/: CMakeLists.txt  main.c  main.h  run_time.c  run_time.h  store_management.c  store_management.h  utilities.c  utilities.h
Project_P1/Solution/Experimental_solution/: main.c
Project_P1/Solution/Project_solution/: utilities.c
Project_P1/Test/: README.md
